[DevTools] Properly handle cache-only requests when cache is disabled

If a request is cache-only (e.g., back navigation to a POST) but "disable
cache" is checked in dev-tools, then set the cache policy to both load only
from cache and bypass the cache. This will result in the proper ERR_CACHE_MISS
from the network stack.

BUG=663728

Review-Url: https://codereview.chromium.org/2508473002
Cr-Commit-Position: refs/heads/master@{#432946}

Former-commit-id: c1331a41ffd5d4dce093398c03619eb8cc06f323