content/child/web_url_request_util.cc
@@ -209,6 +209,9 @@ int GetLoadFlagsForWebURLRequest(const blink::WebURLRequest& request) {
       break;
     case WebCachePolicy::UseProtocolCachePolicy:
       break;
+    case WebCachePolicy::BypassCacheLoadOnlyFromCache:
+      load_flags |= net::LOAD_ONLY_FROM_CACHE | net::LOAD_BYPASS_CACHE;
+      break;
   }
 
   if (!request.allowStoredCredentials()) {
