third_party/WebKit/public/platform/WebCachePolicy.h
@@ -16,6 +16,8 @@ enum class WebCachePolicy {
   ReturnCacheDataDontLoad,  // results of a post - allow stale data and only use
                             // cache
   ReturnCacheDataIfValid,   // for cache-aware loading - disallow stale data
+  BypassCacheLoadOnlyFromCache,  // for cache-only load when disable cache
+                                 // is enabled. Results in a network error.
 };
 
 }  // namespace blink
